fix viewport iframe scrollbar

--- a/conreq/_core/home/static/conreq/viewport.css
+++ b/conreq/_core/home/static/conreq/viewport.css
@@ -10,6 +10,7 @@
 .viewport-container > iframe {
 	width: 100%;
 	height: 100%;
+	display: block;
 }
 
 .viewport-container.no-padding {
